--- a/vis.html
+++ b/vis.html
@@ -6,5 +6,12 @@
     <script src="js/vis.js" charset="utf-8"></script>                                                   
   </head>                                                                                               
   <body>                                                                                                
+    <nav style="display: inline">
+      <button id="trans-color" class="btn">Color</button>
+      <button id="trans-move" class="btn">Move</button>
+      <button id="trans-shrink" class="btn">Shrink</button>
+      <button id="trans-doit" class="btn">Do it</button>
+      <button id="trans-reset" class="btn">Reset</button>
+    </nav>
   </body>                                                                                               
 </html> 
