--- a/vis.html
+++ b/vis.html
@@ -9,6 +9,7 @@
     <nav style="display: inline">
       <button id="trans-color" class="btn">Color</button>
       <button id="trans-move" class="btn">Move</button>
+      <button id="trans-move-del" class="btn">Wave</button>
       <button id="trans-shrink" class="btn">Shrink</button>
       <button id="trans-doit" class="btn">Do it</button>
       <button id="trans-reset" class="btn">Reset</button>
