--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
             <p>
               Loading data from an:
             </p>
-            <p class="fragment">api</p>
+            <p class="fragment"><a href="http://localhost:5800/vis.html?source=http://headers.jsontest.com/" target="_blank">api</a></p>
             <p class="fragment">socket.io</p>
             <p class="fragment">redis</p>
             <p class="fragment">any file</p>
@@ -409,9 +409,6 @@
 					<h1>THE END</h1>
 					<p>
             Made using <a href="http://lab.hakim.se/reveal-js/#/" target="_blank">reveal.js</a>
-					</p>
-					<p>
-            Running on aws eb
 					</p>
 					<p>
             Deployed using docker
