--- a/vis.html
+++ b/vis.html
@@ -14,5 +14,7 @@
       <button id="trans-doit" class="btn">Do it</button>
       <button id="trans-reset" class="btn">Reset</button>
     </nav>
+    <section>
+    </section>
   </body>                                                                                               
 </html> 
